# tuidoist

./: .gitignore  CHANGELOG.md  LABEL_MANAGEMENT.md  README.md  TODO.md  debug_filters.py  devenv.nix  flake.nix  main.py  pyproject.toml  test_comprehensive_filters.py  test_direct_sync.py  test_enhanced_filters.py  test_filter_display.py  test_filters.py  test_filters_complete.py  test_labels.py  test_selection.py  tui.py
.github/: copilot-instructions.md
ptaskwarrior_tui/: __init__.py  app.py
ptaskwarrior_tui/api/: __init__.py
ptaskwarrior_tui/screens/: __init__.py
ptaskwarrior_tui/utils/: __init__.py
ptaskwarrior_tui/widgets/: __init__.py
tuidoist/: __init__.py  app.py  colors.py  keybindings.py  styles.tcss
tuidoist/api/: __init__.py
tuidoist/config/: __init__.py
tuidoist/screens/: __init__.py
tuidoist/utils/: __init__.py
tuidoist/widgets/: __init__.py  task_detail.py
